# Lucifer-G0

./: CMakeLists.txt  add_opencv_to.sh  create_project.sh  hello.txt  my_supervoxel.cpp
NRLC_Detect/: CMakeLists.txt
NRLC_Detect/header/: MyCloud.h  transform.h
NRLC_Detect/src/: NRLC_Detect.cpp  transform.cpp
NRLC_Detect_bak/: CMakeLists.txt
NRLC_Detect_bak/header/: transform.h
NRLC_Detect_bak/src/: ObjectWindow.cpp
NRLC_Detect_bak2/: CMakeLists.txt
NRLC_Detect_bak2/header/: normal_estimation.h
NRLC_Detect_bak2/src/: normal_estimation.cpp  transform.cpp
border2png/: CMakeLists.txt  ObjectWindow.cpp  ObjectWindow.h  border2png.cpp
border2png/res/: points2.cam
dataset_check/: CMakeLists.txt
dataset_check/header/: normal_estimation.h  transform.h
dataset_check/src/: normal_estimation.cpp  run.cpp  transform.cpp
depth_detect/: CMakeLists.txt  push_back.txt
depth_detect/header/: DepthDetect.h  transform.h
depth_detect/src/: DepthDetect.cpp  depth_detect.cpp  depth_fix.cpp  transform.cpp
depth_fix/: .format_define.sh.swp
depth_fix/header/: DepthDetect.h  Fix.h  ForeGround.h  MyColor.hpp  normal_estimation.h  transform.h
depth_fix/src/: DepthDetect.cpp  Fix.cpp  ForeGroud.cpp  ForeGround.cpp  ObjectWindow.cpp  depth_fix.cpp  depth_fix_bak.cpp  normal_estimation.cpp  planar_0.pcd  planar_1.pcd  transform.cpp
depth_fix_bak/: CMakeLists.txt  object_color_define.txt
depth_fix_bak/header/: BackGround.h  DepthDetect.h
depth_fix_bak/src/: BackGround.cpp  DepthDetect.cpp  ForeGround.cpp  depth_fix.cpp  transform.cpp
depth_fix_down/: color.txt  push_back.sh
depth_fix_down/header/: DepthDetect.h  MyColor.hpp
depth_fix_down/src/: DepthDetect.cpp  depth_fix.cpp
depth_fix_down_2D/header/: DepthDetect.h  ObjectWindow.h
depth_fix_down_2D/src/: DepthDetect.cpp  ObjectWindow.cpp  depth_fix.cpp  transform.cpp
depth_fix_down_3D/: color_define.txt
depth_fix_down_3D/header/: DepthDetect.h  MyOBB.hpp
depth_fix_down_3D/src/: DepthDetect.cpp  depth_fix.cpp
depth_fix_down_v1/: WJBF.cpp  color_define.sh
depth_fix_down_v1/header/: DepthDetect.h
depth_fix_down_v1/src/: DepthDetect.cpp  depth_fix.cpp
depth_show/: depth_show.py
test_NRLC/: CMakeLists.txt  normal_estimation.cpp  test_NRLC.cpp
test_cluster_blue/: 00000_cloud_blue.pcd  CMakeLists.txt  ObjectWindow.h  blue.pcd  nrlc_test_out_max_40_000.pcd  test_cluster_blue.cpp
